cluster-talos/kubernetes/infrastructure/configs/cilium/httproute-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: cilium
spec:
  parentRefs:
    - name: main
      namespace: cilium
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
